GoogleStorageResource: Returns the self-link of an object or bucket i… (#341)
* GoogleStorageResource: Returns the self-link of an object or bucket instead of always throwing a Malformed URL exception

* add admonition for getURL() vs getURI() difference